--- a/.npmrc
+++ b/.npmrc
@@ -4,8 +4,8 @@
 # npm config set sass_binary_site https://npm.taobao.org/mirrors/node-sass/
 # npm config set phantomjs_cdnurl https://npm.taobao.org/mirrors/phantomjs/
 
-registry=https://registry.npm.taobao.org/
-disturl=https://npm.taobao.org/dist
-electron_mirror=https://npm.taobao.org/mirrors/electron/
-sass_binary_site=https://npm.taobao.org/mirrors/node-sass/
-phantomjs_cdnurl=https://npm.taobao.org/mirrors/phantomjs/
+# registry=https://registry.npm.taobao.org/
+# disturl=https://npm.taobao.org/dist
+# electron_mirror=https://npm.taobao.org/mirrors/electron/
+# sass_binary_site=https://npm.taobao.org/mirrors/node-sass/
+# phantomjs_cdnurl=https://npm.taobao.org/mirrors/phantomjs/
