update conky config ; vim neobundle to dein
Signed-off-by: anlijiu <anlijiu@gmail.com>

--- a/.config/conky/conky.conf
+++ b/.config/conky/conky.conf
@@ -37,12 +37,12 @@ conky.config = {
 	--Placement
 
 	alignment = 'top_right',
-	gap_x = 10,
+	gap_x = 0,
 	gap_y = 0,
 	minimum_height = 1080,
 	maximum_height = 1080,
-	minimum_width = 550,
-	maximum_width = 650,
+	minimum_width = 500,
+	maximum_width = 700,
 
 	--Graphical
 
@@ -83,10 +83,10 @@ conky.config = {
 
 	xinerama_head = 1,
 	own_window = true,
-	own_window_argb_value = 0,
+	own_window_argb_value = 150,
 	own_window_argb_visual = true,
 	own_window_class = 'Conky',
-	own_window_colour = '#000000',
+	own_window_colour = '#0A0A0A',
 	own_window_hints = 'undecorated,below,sticky,skip_taskbar,skip_pager',
 	own_window_transparent = no,
 	own_window_title = 'system_conky',
@@ -163,8 +163,8 @@ ${lua conky_draw_bg 5 6 462 109 25 0x998899 0} #Background Speed Download
 ${voffset 100}             
 ${offset 15}${color1}${font ubuntu:size=10:style=bold}Up: ${offset 135}${font Ubuntu:size=10:style=normal}$color2${upspeed wlp2s0} / ${totalup wlp2s0}\
 ${offset 15}${color1}${font Ubuntu:size=10:style=bold}Down: ${alignr}${offset -35}${font Ubuntu:size=10:style=normal}$color2${downspeed wlp2s0} / ${totaldown wlp2s0}
-${offset 15}${upspeedgraph wlp2s0 40,240 4B1B0C FF5C2B 1280KiB -l}\
-${offset 15}${downspeedgraph wlp2s0 40,240 324D23 77B753 1280KiB -l}
+${offset 15}${upspeedgraph wlp3s0 40,240 4B1B0C FF5C2B 1280KiB -l}\
+${offset 15}${downspeedgraph wlp3s0 40,240 324D23 77B753 1280KiB -l}
 
 ${offset 15}${color1}${font ubuntu:size=10:style=bold}sda: ${offset 180}${font Ubuntu:size=10:style=normal}$color2${diskio /dev/sda}\
 ${offset 15}${color1}${font Ubuntu:size=10:style=bold}sdb: ${alignr}${offset -35}${font Ubuntu:size=10:style=normal}$color2${diskio /dev/sdb}
