--- a/.config/conky/conky.left.conf
+++ b/.config/conky/conky.left.conf
@@ -1,5 +1,6 @@
 -- vim: ts=4 sw=4 noet ai cindent syntax=lua
 conky.config = {
+	xinerama_head = 1,
     alignment = 'top_left',
     background = false,
     border_width = 0,
@@ -28,7 +29,7 @@ conky.config = {
     own_window = true,
     own_window_class = 'Conky',
     own_window_transparent = false,
-    own_window_type = 'normal',
+    own_window_type = 'desktop',
     --own_window_argb_value = 120,
     --own_window_colour = '373737',
     stippled_borders = 0,
