--- a/.config/conky/weather/package.json
+++ b/.config/conky/weather/package.json
@@ -1,4 +1,5 @@
 {
+  "type": "module",
   "name": "weather",
   "version": "1.0.0",
   "description": "",
@@ -9,11 +10,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "cheerio": "^1.0.0-rc.2",
-    "download": "^7.1.0",
-    "moment": "^2.23.0",
-    "node-fetch": "^2.3.0",
-    "request": "^2.88.0",
-    "shelljs": "^0.8.4"
+    "cheerio": "^1.0.0-rc.10",
+    "download": "^8.0.0",
+    "moment": "^2.29.1",
+    "node-fetch": "^3.2.3",
+    "request": "^2.88.2",
+    "shelljs": "^0.8.5"
   }
 }
