add some config

--- a/.config/conky/conky.conf
+++ b/.config/conky/conky.conf
@@ -40,7 +40,6 @@ conky.config = {
 	gap_x = 0,
 	gap_y = 0,
 	minimum_height = 1080,
-	maximum_height = 1080,
 	minimum_width = 500,
 	maximum_width = 700,
 
@@ -90,7 +89,7 @@ conky.config = {
 	own_window_hints = 'undecorated,below,sticky,skip_taskbar,skip_pager',
 	own_window_transparent = no,
 	own_window_title = 'system_conky',
-	own_window_type = 'normal',-- # options are: normal/override/dock/desktop/panel
+	own_window_type = 'dock',-- # options are: normal/override/dock/desktop/panel
 	
 
 	--Colours
@@ -160,14 +159,24 @@ ${lua conky_draw_bg 5 2 312 116 180 0x333344 0} #Background Main 3
 ${lua conky_draw_bg 5 6 430 109 25 0x558888 0} #Background Signal
 ${lua conky_draw_bg 5 6 462 109 25 0x998899 0} #Background Speed Download
 
-${voffset 100}             
-${offset 15}${color1}${font ubuntu:size=10:style=bold}Up: ${offset 135}${font Ubuntu:size=10:style=normal}$color2${upspeed wlp2s0} / ${totalup wlp2s0}\
-${offset 15}${color1}${font Ubuntu:size=10:style=bold}Down: ${alignr}${offset -35}${font Ubuntu:size=10:style=normal}$color2${downspeed wlp2s0} / ${totaldown wlp2s0}
-${offset 15}${upspeedgraph wlp3s0 40,240 4B1B0C FF5C2B 1280KiB -l}\
-${offset 15}${downspeedgraph wlp3s0 40,240 324D23 77B753 1280KiB -l}
+# 根据脚本 test/shell/cat_hwmonX_name.sh 可以看到各个 hwmon 代表的含义 :( 我的笔记本没有风扇信息.   "sensors"命令可以看到， "inxi -Fazy" 命令也可以看到
+${voffset -10}             
+${if_match $acpitemp <= 55}${offset 85}${font ubuntu:size=12:style=bold}${color orange}$acpitemp°C$color
+$else${offset 85}${font ubuntu:size=12:style=bold}${color red}$acpitemp°C$color
+$endif
+# ${offset 15}${color1}${font ubuntu:size=10:style=bold}Temp:
+# ${offset 15}${font ubuntu:size=10:style=bold}$color7}CPU: ${font Ubuntu:size=10:style=normal}$color8  ${hwmon 1 temp 1}°C \
+# ${offset 15}${font ubuntu:size=10:style=bold}$color7}CPU: ${font Ubuntu:size=10:style=normal}$color8  ${hwmon 1 temp 1}°C \
 
-${offset 15}${color1}${font ubuntu:size=10:style=bold}sda: ${offset 180}${font Ubuntu:size=10:style=normal}$color2${diskio /dev/sda}\
-${offset 15}${color1}${font Ubuntu:size=10:style=bold}sdb: ${alignr}${offset -35}${font Ubuntu:size=10:style=normal}$color2${diskio /dev/sdb}
-${offset 15}${voffset 15}${diskiograph /dev/sda 40,240 4B1B0C FF5C2B -l} \
-${offset 15}${diskiograph /dev/sdb 40,240 324D23 77B753 -l}
+${voffset 50}
+${offset 15}${color1}${font ubuntu:size=10:style=bold}Up: ${offset 135}${font Ubuntu:size=10:style=normal}$color2${upspeed enp0s31f6} / ${totalup enp0s31f6}\
+${offset 15}${color1}${font Ubuntu:size=10:style=bold}Down: ${alignr}${offset -35}${font Ubuntu:size=10:style=normal}$color2${downspeed enp0s31f6} / ${totaldown enp0s31f6}
+${offset 15}${upspeedgraph enp0s31f6 40,240 4B1B0C FF5C2B 1280KiB -l}\
+${offset 15}${downspeedgraph enp0s31f6 40,240 324D23 77B753 1280KiB -l}
+
+${offset 15}${color1}${font ubuntu:size=10:style=bold}sda: ${offset 180}${font Ubuntu:size=10:style=normal}$color2${diskio /dev/nvme0n1}\
+${offset 15}${color1}${font Ubuntu:size=10:style=bold}sdb: ${alignr}${offset -35}${font Ubuntu:size=10:style=normal}$color2${diskio /dev/nvme1n1}
+${offset 15}${voffset 15}${diskiograph /dev/nvme0n1 40,240 4B1B0C FF5C2B -l} \
+${offset 15}${diskiograph /dev/nvme1n1 40,240 324D23 77B753 -l}
+
 ]]
