--- a/etc/apt/apt.conf.d/proxy.conf
+++ b/etc/apt/apt.conf.d/proxy.conf
@@ -1,2 +1,2 @@
-Acquire::http::Proxy "socks5h://localhost:9099/";
-Acquire::https::Proxy "socks5h://localhost:9099/";
+Acquire::http::Proxy "socks5h://localhost:9099";
+Acquire::https::Proxy "socks5h://localhost:9099";
