--- a/.vim/coc-settings.json
+++ b/.vim/coc-settings.json
@@ -51,7 +51,7 @@
         "-Xms1g",
         "-Xmx2g",
         "-jar", "/home/an/.program/jdt-language-server-1.44.0-202412192041/plugins/org.eclipse.equinox.launcher_1.6.900.v20240613-2009.jar",
-        "-configuration", "/home/an/.program/jdt-language-server-1.44.0-202412192041//config_linux",
+        "-configuration", "/home/an/.program/jdt-language-server-1.44.0-202412192041/config_linux",
         "-data", "/home/an/workspace/zhangrui/mt8676/lla/android"
       ],
       "java.project.sourcePaths": [
@@ -65,25 +65,6 @@
         "/home/an/workspace/zhangrui/mt8676/lla/android/out_sys/target/common/obj/JAVA_LIBRARIES/framework-minus-apex_intermediates/javalib.jar"
       ],
     },
-		"clangd": {
-			"command": "clangd",
-			"rootPatterns": [".git", ".svn", ".hg", ".root", ".project"],
-			"filetypes": ["c", "cc", "cpp", "c++", "objc", "objcpp"],
-			"initializationOptions": {
-				"fallbackFlags": [
-          "-std=c++20", "-Idefs", "-Iinclude", "-I.", "-L.",
-					"-Ie:/usr/local/include",
-					"-Ie:/usr/include",
-					"-Wall"
-				],
-        "arguments": [
-          "-j=8",
-          "--malloc-trim",
-          "--background-index",
-          "--pch-storage=memory",
-        ],
-			}
-		}
     "cmake": {
       "command": "cmake-language-server",
       "filetypes": ["cmake"],
@@ -99,6 +80,43 @@
       "filetypes": ["haskell", "lhaskell"]
     }
   },
+  "clangd.fallbackFlags": [
+    "-std=c++23",
+    "-Idefs",
+    "-Iinclude",
+    "-I.",
+    "-L.",
+    "-Wall",
+  ],
+  "clangd.path": "/usr/bin/clangd",
+  "clangd.compilationDatabasePath1": "/home/an/workspace/zhangrui/mt8676/lla/android/out_sys/soong/development/ide/compdb",
+  "clangd.checkUpdates": true,
+  "clangd.disableProgressNotifications": false,
+  "clangd.inactiveRegions.useBackgroundHighlight": true,
+  "clangd.rootPatterns": [
+    "compile_commands.json",
+    "rust-project.json",
+    ".git",
+    ".project",
+    '.svg',
+    '.hg',
+    '.root'
+  ],
+  "clangd.initializationOptions.cache.directory": [".cache/clangd"],
+  "clangd.arguments": [
+    "-j=2",
+    "--limit-results=100",
+    "--limit-references=100",
+    "--background-index",
+    "--header-insertion=never",
+    "--background-index-priority=low",
+    "--query-driver=/usr/bin/clang++",
+    "--all-scopes-completion",
+    "--completion-style=bundled",
+    "--pch-storage=memory",
+    "--pretty",
+    "--malloc-trim"
+  ],
   "list.insertMappings": {
     "<C-n>": "normal:j",
     "<C-p>": "normal:k"
